--- a/.gitignore
+++ b/.gitignore
@@ -7,30 +7,30 @@ BulletingService.h
 DeServer
 DeServer.o
 a.txt
-gen-cpp/.deps/.dirstamp
-gen-cpp/.deps/DecodeEngine.Plo
-gen-cpp/.deps/DecodeEngine_server.skeleton.Plo
-gen-cpp/.deps/decode_engine_constants.Plo
-gen-cpp/.deps/decode_engine_types.Plo
-gen-cpp/.dirstamp
-gen-cpp/.libs/DecodeEngine.o
-gen-cpp/.libs/DecodeEngine_server.skeleton.o
-gen-cpp/.libs/decode_engine_constants.o
-gen-cpp/.libs/decode_engine_types.o
-gen-cpp/DecodeEngine.cpp
-gen-cpp/DecodeEngine.h
-gen-cpp/DecodeEngine.lo
-gen-cpp/DecodeEngine.o
-gen-cpp/DecodeEngine_server.skeleton.cpp
-gen-cpp/DecodeEngine_server.skeleton.lo
-gen-cpp/DecodeEngine_server.skeleton.o
-gen-cpp/decode_engine_constants.cpp
-gen-cpp/decode_engine_constants.h
-gen-cpp/decode_engine_constants.lo
-gen-cpp/decode_engine_constants.o
-gen-cpp/decode_engine_types.cpp
-gen-cpp/decode_engine_types.h
-gen-cpp/decode_engine_types.lo
-gen-cpp/decode_engine_types.o
+*/gen-cpp/.deps/.dirstamp
+*/gen-cpp/.deps/DecodeEngine.Plo
+*/gen-cpp/.deps/DecodeEngine_server.skeleton.Plo
+*/gen-cpp/.deps/decode_engine_constants.Plo
+*/gen-cpp/.deps/decode_engine_types.Plo
+*/gen-cpp/.dirstamp
+*/gen-cpp/.libs/DecodeEngine.o
+*/gen-cpp/.libs/DecodeEngine_server.skeleton.o
+*/gen-cpp/.libs/decode_engine_constants.o
+*/gen-cpp/.libs/decode_engine_types.o
+*/gen-cpp/DecodeEngine.cpp
+*/gen-cpp/DecodeEngine.h
+*/gen-cpp/DecodeEngine.lo
+*/gen-cpp/DecodeEngine.o
+*/gen-cpp/DecodeEngine_server.skeleton.cpp
+*/gen-cpp/DecodeEngine_server.skeleton.lo
+*/gen-cpp/DecodeEngine_server.skeleton.o
+*/gen-cpp/decode_engine_constants.cpp
+*/gen-cpp/decode_engine_constants.h
+*/gen-cpp/decode_engine_constants.lo
+*/gen-cpp/decode_engine_constants.o
+*/gen-cpp/decode_engine_types.cpp
+*/gen-cpp/decode_engine_types.h
+*/gen-cpp/decode_engine_types.lo
+*/gen-cpp/decode_engine_types.o
 libdegencpp.la
 
