--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,12 +2,15 @@ AUTOMAKE_OPTIONS = subdir-objects serial-tests
 
 noinst_LTLIBRARIES = libdegencpp.la
 nodist_libdegencpp_la_SOURCES = \
-        gen-cpp/decode_engine_constants.cpp \
-        gen-cpp/decode_engine_constants.h \
-        gen-cpp/DecodeEngine.cpp \
-        gen-cpp/DecodeEngine.h \
-        gen-cpp/DecodeEngine_server.skeleton.cpp \
-        gen-cpp/decode_engine_types.cpp
+	gen-cpp/BulletinBoard.cpp \
+	gen-cpp/BulletinBoard.h \
+	gen-cpp/decode_engine_constants.cpp \
+	gen-cpp/decode_engine_constants.h \
+	gen-cpp/DecodeEngine.cpp \
+	gen-cpp/DecodeEngine.h \
+	gen-cpp/decode_engine_types.cpp \
+	gen-cpp/decode_engine_types.h
+
 
 libdegencpp_la_LIBADD = /usr/local/lib/libthrift.la
 
@@ -19,7 +22,6 @@ DeServer_SOURCES = \
 	BbLauncher.cpp \
 	DeLauncher.cpp \
 	BulletinService.cpp \
-	ChildService.cpp \
 	CommandLineParser.cpp \
 	DeLauncherRemote.cpp \
 	DeServer.cpp \
@@ -27,7 +29,8 @@ DeServer_SOURCES = \
 	WorkerService.cpp
 
 DeServer_LDADD = /usr/local/lib/libthrift.la \
-                 libdegencpp.la
+	libdegencpp.la \
+	-lboost_thread
 
 #DeClient_SOURCES = \
 #	CppClient.cpp
@@ -37,8 +40,9 @@ DeServer_LDADD = /usr/local/lib/libthrift.la \
 #
 THRIFT = thrift
 
-gen-cpp/decode_engine_constants.cpp gen-cpp/decode_engine_constants.h gen-cpp/DecodeEngine.cpp gen-cpp/DecodeEngine.h gen-cpp/DecodeEngine_server.skeleton.cpp gen-cpp/decode_engine_types.cpp gen-cpp/decode_engine_types.h : decode_engine.thrift
+gen-cpp/BulletinBoard.cpp gen-cpp/BulletinBoard.h gen-cpp/BulletinBoard_server.skeleton.cpp gen-cpp/decode_engine_constants.cpp gen-cpp/decode_engine_constants.h gen-cpp/DecodeEngine.cpp gen-cpp/DecodeEngine.h gen-cpp/DecodeEngine_server.skeleton.cpp gen-cpp/decode_engine_types.cpp gen-cpp/decode_engine_types.h : decode_engine.thrift
 	$(THRIFT) --gen cpp -r $<
+
 
 AM_CPPFLAGS = $(BOOST_CPPFLAGS) $(LIBEVENT_CPPFLAGS) -I$(top_srcdir)/lib/cpp/src -Igen-cpp
 AM_CXXFLAGS = -Wall -Wextra -pedantic
